force-app/main/default/objects/ProductRequired/fields/Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Action_Required__c</fullName>
    <label>Action Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Drop Off</fullName>
            </value>
            <value>
                <fullName>To Pick Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>