force-app/main/default/objects/ProductRequired/fields/ATAK_Code__c.field-meta.xml
<CustomField>
    <fullName>ATAK_Code__c</fullName>
    <label>ATAK Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>