force-app/main/default/objects/ProductRequired/fields/Material_Item__c.field-meta.xml
<CustomField>
    <fullName>Material_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Item</label>
    <referenceTo>ProductItem</referenceTo>
    <relationshipLabel>Products Required</relationshipLabel>
    <relationshipName>Products_Required</relationshipName>
    <type>Lookup</type>
</CustomField>